Bug 783134: Work around crashing on startup with fullscreen widgets. r=roc